--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.0.96/css/materialdesignicons.min.css"
     integrity="sha512-fXnjLwoVZ01NUqS/7G5kAnhXNXat6v7e3M9PhoMHOTARUMCaf5qNO84r5x9AFf5HDzm3rEZD8sb/n6dZ19SzFA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script id="debug-script" src="https://cdn.jsdelivr.net/gh/MickShannahan/style-debug@latest/debug.min.js"
+    defer></script>
   <link rel="stylesheet" href="assets/style/main.css">
   <link rel="stylesheet" href="assets/style/style.css">
   <title>checkpoint4-inspire</title>
 </head>
 
-<body>
+<body class="debug">
   <!-- SECTION -->
   <header>
     <nav class="navbar navbar-dark navbar-expand bg-dark text-light px-2">
@@ -38,15 +42,54 @@
     </nav>
   </header>
 
-  <!-- SECTION -->
+  <!-- NOTE - Offcanvas section here -->
+  <!-- <button id="todos-button" class="ms-2 btn btn-outline-light" data-bs-toggle="offcanvas"
+    data-bs-target="#todos-offcanvas">
+    <div class="offcanvas-header">">Todos - Offcanvas button
+  </button> -->
+  <!-- <div class="offcanvas offcanvas-end" id="todos-offcanvas">
+    <div class="offcanvas-header">
+      Todos - offcanvas header
+    </div>
+    <section id="my-todos" class="offcanvas-body">
+      offcanvas body
+    </section>
+  </div> -->
+
+
+  <!-- SECTION - TODO LIST -->
   <main>
-    
+    <section class="container-fluid">
+      <div class="row justify-content-between">
+        <div class="col-md-9">Image info</div>
+        <div class="col-md-3 text-end border border-dark">2 Todos remaining
+          <form onsubmit="app.TodosController.createTodo()" class=" m-2sticky-top">
+            <div class="mb-3">
+              <label for="togo" class="form-label"></label>
+              <input type="text" class="form-control" name="todo" id="tag" required maxlength="120"
+                placeholder="add todo">
+              <button class="btn btn-primary">+</button>
+            </div>
+          </form>
+          <div class="todos">
+
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
+
   <!-- SECTION -->
-  <footer class="bg-dark text-light">
-    <div class="text-center no-select">
-      <p class="mb-0"><small>Made with 💖 by CodeWorks</small></p>
+  <footer class="container-fluid">
+    <div class="row text-bg-dark mb-5 d-flex justify-content-around text-center">
+      <p>Quote</p>
+      <p>Author</p>
+    </div>
+    <div class="row text-bg-dark mb-5 d-flex justify-content-around text-center">
+      <div class="col-md-2">Weather</div>
+      <div class="col-md-4">Time</div>
+      <div class="col-md-2">Greeting</div>
     </div>
   </footer>
 
