--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section class="container-fluid">
       <div class="row justify-content-between">
         <div class="col-md-9">Image info</div>
-        <div class="col-md-3 text-end border border-dark">2 Todos remaining
+        <div class="col-md-3 text-end border border-dark" id="todo-count">0 <span>todos remaining</span>
           <form onsubmit="app.TodosController.createTodo()" class=" m-2sticky-top">
             <div class="mb-3">
               <label for="togo" class="form-label"></label>
@@ -78,6 +78,8 @@
       </div>
     </section>
   </main>
+
+
 
 
   <!-- SECTION -->
